--- a/Carreira Front End/Missao 3/Conteudo/Propriedades/Pagina-bolo/style.css
+++ b/Carreira Front End/Missao 3/Conteudo/Propriedades/Pagina-bolo/style.css
@@ -3,20 +3,20 @@ div {
 }
 
 h1 {
-    text-align: center;
+    text-align: justify;
     font-weight: bold;
     font-size: 38px;
 }
 
 h2 {
     font-weight: normal;
-    text-align: center;
-    color: brown;
+    text-align: left;
+    color: black;
     font-size: 28px;
 }
 
 h3 {
-    text-decoration: underline;
+    text-decoration: overline;
     color: brown;
     font-size: 20px;
 }
