--- a/Carreira Front End/Missao 3/Projeto-Livraria/style.css
+++ b/Carreira Front End/Missao 3/Projeto-Livraria/style.css
@@ -14,12 +14,27 @@ a {
     border-radius: 50px;
     font-weight: bold;
     color: white;
+    font-size: 14px;
 }
 
 p {
-    margin-bottom: 25px;
+    text-align: center;
+    line-height: 28px;
+    width: 930px;
 }
 
 span {
     font-weight: bold;
+}
+
+img {
+    width: 190px;
+}
+
+h3 {
+    font-size: 20px;
+}
+
+h2 {
+    font-size: 24px;
 }
